--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -1,26 +1,13 @@
 @use '../../../../styles/settings' as *;
 
-main .form form .panel-repeatable-panel {
-    &__conditional {
-        display: none;
-    }
-
-    .field-wrapper {
-        color: $text-primary;
-        margin-top: 24px;
-        margin-bottom: 24px;
-    }
-
-    .field-label {
-        margin-bottom: 12px;
-    }
-
+main .form form {
     .repeatable-entries {
         .repeatable-entry {
             padding: $spacing-400 $spacing-900 $spacing-400 $spacing-400;
-            border: solid 1px $stroke-secondary;
-            position: relative;
+            border: solid $color-secondary 1px;
             border-radius: $border-radius-large;
+            position: relative;
+            margin-bottom: $spacing-600;
 
             &__edit {
                 position: absolute;
@@ -29,6 +16,18 @@ main .form form .panel-repeatable-panel {
                 width: 56px;
                 height: 26px;
                 background-image: url(./images/edit-icon.png);
+                background-repeat: no-repeat;
+                display: block;
+                text-decoration: underline;
+                padding-left: 28px;
+            }
+
+            &__delete {
+                position: absolute;
+                top: ($spacing-400*2 + 26px);
+                right: $spacing-400;
+                width: 56px;
+                height: 26px;
                 background-repeat: no-repeat;
                 display: block;
                 text-decoration: underline;
@@ -44,48 +43,47 @@ main .form form .panel-repeatable-panel {
             color: inherit;
         }
     }
+}
 
-    .repeat-actions {
+main .form form .panel-repeatable-panel {
+    &__conditional {
         display: none;
+    }
+
+    .field-wrapper {
+        color: $text-primary;
+        margin-top: 24px;
+        margin-bottom: 24px;
+    }
+
+    .field-label {
+        margin-bottom: 12px;
     }
 
     .item-remove {
         display: none !important;
     }
 
-    .editing .item-add {
-        display: none !important;
+    &.editing {
+        .item-add,
+        .repeatable-entry__edit,
+        .repeatable-entry__delete {
+            display: none !important;
+        }
     }
 
-    [data-repeatable].saved {
+    [data-repeatable] {
         display: none;
-    }
 
-    [data-repeatable]:not(.saved) {
-        display: block;
-    }
+        .button-bar {
+            display: flex;
+            gap: 20px;
+            margin-top: 20px;
+        }
 
-    .btn-save,
-    .btn-cancel {
-        display: none;
-    }
-
-    [data-repeatable] .button-bar {
-        display: flex;
-        gap: 20px;
-        margin-top: 20px;
-    }
-
-    [data-repeatable].current {
-
-        .btn-save,
-        .btn-cancel {
+        &.current {
             display: block;
         }
     }
 
-    .repeatable-entry {
-        border: solid $color-secondary 1px;
-        border-radius: $border-radius-large;
-    }
 }
