feat(form) repeatable panel styling fix

--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -1,6 +1,6 @@
 @use '../../../../styles/settings' as *;
 
-main .form form {
+main .form form .panel-repeatable-panel {
     .repeatable-entries {
         .repeatable-entry {
             padding: $spacing-400 $spacing-900 $spacing-400 $spacing-400;
@@ -20,6 +20,11 @@ main .form form {
                 display: block;
                 text-decoration: underline;
                 padding-left: 28px;
+                color: $text-primary;
+
+                &:visited {
+                    color: inherit;
+                }
             }
 
             &__delete {
@@ -36,28 +41,17 @@ main .form form {
         }
     }
 
-    .repeatable-entry__edit {
-        color: $text-primary;
-
-        &:visited {
-            color: inherit;
-        }
-    }
-}
-
-main .form form .panel-repeatable-panel {
     &__conditional {
         display: none;
     }
 
     .field-wrapper {
         color: $text-primary;
-        margin-top: 24px;
-        margin-bottom: 24px;
+        margin-bottom: $spacing-500;
     }
 
     .field-label {
-        margin-bottom: 12px;
+        margin-bottom: $spacing-300;
     }
 
     .item-remove {
@@ -65,6 +59,7 @@ main .form form .panel-repeatable-panel {
     }
 
     &.editing {
+
         .item-add,
         .repeatable-entry__edit,
         .repeatable-entry__delete {
