Style(Styling): input mixins added

--- a/styles/forms/_input.scss
+++ b/styles/forms/_input.scss
@@ -1,6 +1,23 @@
 @use '../settings' as *;
 @use '../base/forms' as *;
 
+/********************
+   DEFAULT LABEL + INPUT
+********************/
+label,
+input[type='text'],
+input[type='radio'],
+input[type='checkbox'] {
+  cursor: pointer;
+}
+
+fieldset {
+  border: 0;
+}
+
+/********************
+   TEXT INPUT
+********************/
 .text-wrapper {
   display: flex;
   flex-direction: column;
@@ -9,19 +26,20 @@
     font-size: 20px;
     line-height: 120%;
     font-weight: 500;
-    margin-bottom: 4px;
+    margin-bottom: $spacing-100;
     color: $text-secondary;
   }
 
   input[type='text'] {
     border-radius: $border-radius-mid;
-    border: 2px solid $stroke-tertiary;
+    border: $stroke-input-stroke solid $stroke-tertiary;
     padding: $spacing-400;
-    background: $bg-light-secondary;
+    background: $bg-light-primary;
     font-family: $font-family;
     font-size: 20px;
     line-height: 120%;
     caret-color: $color-primary;
+    color: $text-primary;
 
     &::placeholder {
       color: $text-secondary;
@@ -31,8 +49,188 @@
     &:focus,
     &:active,
     &:hover {
-      border-color: $stroke-accent;
-      outline: $stroke-accent;
+      border: $stroke-input-stroke solid $stroke-accent;
+      background: $color-shade-blue-10;
+      outline: none;
     }
+
+    &:disabled {
+      border: $stroke-input-stroke solid $color-grey-black-20;
+      background: $color-grey-black-05;
+      color: $text-secondary;
+      cursor: not-allowed;
+
+      &::placeholder {
+        color: $text-secondary;
+      }
+    }
+  }
+}
+
+/********************
+   TEXTAREA
+********************/
+textarea {
+  width: 100%;
+  display: block;
+  border-radius: $border-radius-mid;
+  border: $stroke-input-stroke solid $stroke-tertiary;
+  padding: $spacing-400;
+  background: $bg-light-primary;
+  font-family: $font-family;
+  font-size: 20px;
+  line-height: 120%;
+  color: $text-primary;
+  margin-bottom: $spacing-600;
+
+  &::placeholder {
+    color: $text-secondary;
+  }
+
+  &:focus-visible,
+  &:focus,
+  &:active,
+  &:hover {
+    border: $stroke-input-stroke solid $stroke-accent;
+    background: $color-shade-blue-10;
+    outline: none;
+  }
+
+  &:disabled {
+    border: $stroke-input-stroke solid $color-grey-black-20;
+    background: $color-grey-black-05;
+    color: $text-secondary;
+    cursor: not-allowed;
+
+    &::placeholder {
+      color: $text-secondary;
+    }
+  }
+}
+
+/********************
+   NUMBER INPUT
+********************/
+.number-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  label {
+    font-size: 20px;
+    line-height: 120%;
+    font-weight: 500;
+    margin-bottom: $spacing-100;
+    color: $text-secondary;
+  }
+
+  input[type='number'] {
+    display: flex;
+    padding: $spacing-400;
+    align-items: center;
+    gap: $spacing-200;
+    border-radius: $border-radius-mid;
+    border: $stroke-input-stroke solid $stroke-tertiary;
+    background: $bg-light-primary;
+    font-family: $font-family;
+    font-size: 20px;
+    line-height: 120%;
+    caret-color: $color-primary;
+    color: $text-primary;
+
+    &::placeholder {
+      color: $text-secondary;
+    }
+
+    &:focus-visible,
+    &:focus,
+    &:active,
+    &:hover {
+      border: $stroke-input-stroke solid $stroke-accent;
+      background: $color-shade-blue-10;
+      outline: none;
+    }
+
+    &:disabled {
+      border: $stroke-input-stroke solid $color-grey-black-20;
+      background: $color-grey-black-05;
+      color: $text-secondary;
+      cursor: not-allowed;
+
+      &::placeholder {
+        color: $text-secondary;
+      }
+    }
+  }
+}
+
+/********************
+   EMAIL INPUT
+********************/
+.email-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  .field-label {
+    font-size: 20px;
+    line-height: 120%;
+    font-weight: 500;
+    margin-bottom: $spacing-100;
+    color: $text-secondary;
+    font-family: $font-family;
+  }
+
+  input[type='email'] {
+    display: flex;
+    padding: $spacing-400;
+    align-items: center;
+    gap: $spacing-200;
+    border-radius: $border-radius-mid;
+    border: $stroke-input-stroke solid $stroke-tertiary;
+    background: $bg-light-primary;
+    font-family: $font-family;
+    font-size: 20px;
+    line-height: 120%;
+    caret-color: $color-primary;
+    color: $text-primary;
+
+    &::placeholder {
+      color: $text-secondary;
+    }
+
+    &:focus-visible,
+    &:focus,
+    &:active,
+    &:hover {
+      border: $stroke-input-stroke solid $stroke-accent;
+      background: $color-shade-blue-10;
+      outline: none;
+    }
+
+    &:disabled {
+      border: $stroke-input-stroke solid $color-grey-black-20;
+      background: $color-grey-black-05;
+      color: $text-secondary;
+      cursor: not-allowed;
+
+      &::placeholder {
+        color: $text-secondary;
+      }
+    }
+  }
+}
+
+/********************
+   ERROR STATE
+********************/
+.field-wrapper.field-invalid input,
+.field-wrapper.field-invalid textarea,
+.field-wrapper.field-invalid input[type='email'],
+.field-wrapper.field-invalid input[type='number'] {
+  border: $stroke-input-stroke solid $color-feedback-red;
+  background: $bg-light-primary;
+  color: $color-feedback-red;
+
+  &::placeholder {
+    color: $color-feedback-red;
   }
 }
