chore: add warning misuse of scss mixins

--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -150,6 +150,15 @@
   Contextual Help Colourways
 *******************************/
 
+
+// Mixin can not contain a class name ".something"
+// This file is included on all files that using the main settings
+// If you add a class in within any of the setting file
+// All file include the settings will get compile although nothing is changed from that file
+
+// Below class name get compiled everytime unnecessarily
+// Create mixin here but then imported the settings file to that file and use the mixins within that file
+
 .panel-formcontextualhelp--primary {
   @include panel-help-base($color-white, $text-primary, $text-accent);
 }
@@ -275,6 +284,16 @@
   }
 }
 
+
+// Mixin can not contain a class name ".something"
+// This file is included on all files that using the main settings
+// If you add a class in within any of the setting file
+// All file include the settings will get compile although nothing is changed from that file
+
+// Below class name get compiled everytime unnecessarily
+
+// We already have default form file in the base/forms
+
 /********************
    DEFAULT LABEL + INPUT
 ********************/
@@ -288,6 +307,18 @@ input[type='checkbox'] {
 fieldset {
   border: 0;
 }
+
+
+
+// Mixin can not contain a class name ".something"
+// This file is included on all files that using the main settings
+// If you add a class in within any of the setting file
+// All file include the settings will get compile although nothing is changed from that file
+
+// Below class name get compiled everytime unnecessarily
+
+// We already have a text input file specifically in forms/_input.scss
+// Create mixin here but then imported the settings file to that file and use the mixins within that file
 
 /********************
    TEXT INPUT
@@ -324,6 +355,17 @@ fieldset {
   }
 }
 
+
+// Mixin can not contain a class name ".something"
+// This file is included on all files that using the main settings
+// If you add a class in within any of the setting file
+// All file include the settings will get compile although nothing is changed from that file
+
+// Below class name get compiled everytime unnecessarily
+
+// We already have a text input file specifically in forms/_input.scss
+// Create mixin here but then imported the settings file to that file and use the mixins within that file
+
 /********************
    TEXTAREA
 ********************/
@@ -347,6 +389,17 @@ textarea {
     @include input-disabled;
   }
 }
+
+
+// Mixin can not contain a class name ".something"
+// This file is included on all files that using the main settings
+// If you add a class in within any of the setting file
+// All file include the settings will get compile although nothing is changed from that file
+
+// Below class name get compiled everytime unnecessarily
+
+// We already have a text input file specifically in forms/_input.scss
+// Create mixin here but then imported the settings file to that file and use the mixins within that file
 
 /********************
    NUMBER INPUT
@@ -386,6 +439,17 @@ textarea {
   }
 }
 
+
+// Mixin can not contain a class name ".something"
+// This file is included on all files that using the main settings
+// If you add a class in within any of the setting file
+// All file include the settings will get compile although nothing is changed from that file
+
+// Below class name get compiled everytime unnecessarily
+
+// We already have a text input file specifically in forms/_input.scss
+// Create mixin here but then imported the settings file to that file and use the mixins within that file
+
 /********************
    EMAIL INPUT
 ********************/
@@ -424,6 +488,17 @@ textarea {
     }
   }
 }
+
+
+// Mixin can not contain a class name ".something"
+// This file is included on all files that using the main settings
+// If you add a class in within any of the setting file
+// All file include the settings will get compile although nothing is changed from that file
+
+// Below class name get compiled everytime unnecessarily
+
+// We already have a text input file specifically in forms/_input.scss
+// Create mixin here but then imported the settings file to that file and use the mixins within that file
 
 /********************
    ERROR STATE
