--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -3,6 +3,7 @@
 @use '../settings/spacings' as *;
 @use '../settings/utils' as *;
 @use '../settings/borders' as *;
+@use '../settings/mixins' as *;
 
 /******************************
       Contextual Help Mixins
