Style(Styling): Adding form H3 spacing

--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -234,7 +234,7 @@ ul li {
 
   h3 {
     margin: 0;
-    padding-bottom: $spacing-200;
+    padding-bottom: $spacing-600; // was 200 but updated from UI
   }
 
   h4 {
