--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -1,7 +1,3 @@
-/// This all fixed value at some point
-/// Needs to be replaced by variables value
-/// Once UI Design is ready to developed
-
 @use '../../../../styles/settings' as *;
 
 /******************************
@@ -31,14 +27,21 @@
     height: 24px;
   }
 
-  .panel-formcontextualhelp__title {
-    font-weight: 500;
+  .panel-formcontextualhelp__title { // H5 override
+    color: $color-primary;
+    font-feature-settings: 'liga' off, 'clig' off;
+    font-family: $font-family;
+    font-size: $size-font-h5;
+    font-style: normal;
+    font-weight: $font-weight-bold;
+    line-height: 125%;
+    letter-spacing: $letter-spacing-default;
   }
 
   .plain-text-wrapper {
     p {
       margin-top: 0;
-      padding: $spacing-100 0; // Avoid top/bottom doubling in wizard layout
+      padding: $spacing-100 0;
 
       &:last-child {
         margin-bottom: 0;
@@ -78,9 +81,8 @@
 /******************************
     Panel Colour Variants
 *******************************/
-
 .panel-formcontextualhelp--primary {
-  background-color: $bg-primary; // $color-white
+  background-color: $bg-primary;
   color: $text-primary;
 
   .panel-formcontextualhelp__title {
@@ -93,7 +95,7 @@
 }
 
 .panel-formcontextualhelp--secondary {
-  background-color: $bg-contextual-help-secondary; // $color-shade-blue-10
+  background-color: $bg-contextual-help-secondary;
   color: $text-primary;
 
   .panel-formcontextualhelp__title {
@@ -106,7 +108,7 @@
 }
 
 .panel-formcontextualhelp--tertiary {
-  background-color: $bg-contextual-help-tertiary; // $color-primary-dark-navy
+  background-color: $bg-contextual-help-tertiary;
   color: $text-white;
 
   .panel-formcontextualhelp__title,
@@ -125,6 +127,6 @@
   }
 
   .panel-formcontextualhelp__icon {
-    filter: brightness(0) invert(1); // Invert icon for dark background
+    filter: brightness(0) invert(1);
   }
 }
