--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -144,3 +144,5 @@ $stroke-hover-stroke: 2px;
 
 /* input field background colour */
 $bg-light-primary: $color-white; // white (#ffffff)
+$bg-light-secondary: $color-shade-blue-04;
+
