--- a/styles/settings/_fonts.scss
+++ b/styles/settings/_fonts.scss
@@ -9,15 +9,15 @@
 $font-family: 'Atkinson Hyperlegible Next', sans-serif;
 $size-font-base: 16px;
 
-/* Headings
-$size-font-h1: clamp(48px, 5.2vw, 61px);
-$size-font-h2: 38px;
-$size-font-h3: 32px;
-$size-font-h4: 24px;
-$size-font-h5: 22px;
-$size-font-h6: 20px;*/
+// Font Weights
+$font-weight-regular: 400;
+$font-weight-medium: 500;
+$font-weight-bold: 700;
 
-// Headings
+// Letter Spacing
+$letter-spacing-default: 0px;
+
+/* Headings */
 $size-font-h1: clamp(40px, 5.5vw, 60px);   // 40 → 48 → 60
 $size-font-h2: clamp(36px, 5vw, 48px);     // 36 → 40 → 48
 $size-font-h3: clamp(32px, 4.5vw, 40px);   // 32 → 36 → 40
@@ -37,7 +37,7 @@ $size-font-body-large:   clamp(17px, 1.5vw, 20px); // 17 → 18 → 20
 $size-font-body-default: clamp(15px, 1.25vw, 17px); // 15 → 16 → 17
 $size-font-body-small:   clamp(12px, 1.1vw, 14px); // 12 → 13 → 14
 
-
+// Mixins
 @mixin heading-level-1 {
   font-size: $size-font-h1;
   line-height: 105%;
