--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -216,7 +216,7 @@ ul li {
 /* ------------------------------
    Form Heading Adjustments
 ------------------------------ */
-.wizard .panel-formwelcome .panel-formwelcome__item-content p h6 {
+.wizard .panel-formwelcome .panel-formwelcome__item-content p {
   margin: 0;
   padding-bottom: $spacing-200;
 }
