--- a/blocks/form/components/typeahead/typeahead.scss
+++ b/blocks/form/components/typeahead/typeahead.scss
@@ -3,7 +3,7 @@
 .typeahead {
   position: relative;
 
-  &::after {
+  /*&::after {
     content: url('../../../../icons/search.svg');
     display: block;
     width: 24px;
@@ -12,6 +12,22 @@
     right: 16px;
     top: 50%;
     transform: translateY(-50%);
+  }*/  // Testing this
+
+  &::after {
+    content: '';
+    display: block;
+    width: 1.5rem;
+    height: 1.5rem;
+    position: absolute;
+    right: 1rem;
+    top: 67%;
+    transform: translateY(-50%);
+    pointer-events: none;
+
+    mask: url('../../../../icons/search.svg') no-repeat center / contain;
+    -webkit-mask: url('../../../../icons/search.svg') no-repeat center / contain;
+    background-color: $color-primary-navy;
   }
 
   input[type='text'] {
