--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -1,4 +1,5 @@
 @use '../../../../styles/settings' as *;
+@use '../../../../styles/base' as *;
 
 main .form form .panel-repeatable-panel {
     .repeatable-entries {
@@ -18,34 +19,45 @@ main .form form .panel-repeatable-panel {
             position: relative;
             margin-bottom: $spacing-600;
 
-            &__edit {
-                position: absolute;
-                top: $spacing-400;
-                right: $spacing-400;
+            &__edit,
+            &__delete {
                 width: 56px;
                 height: 26px;
-                background-image: url(./images/edit-icon.png);
                 background-repeat: no-repeat;
                 display: block;
                 text-decoration: underline;
                 padding-left: 28px;
-                color: $text-primary;
+                color: $text-accent;
+                text-align: center;
+                font-family: $font-family;
+                font-size: $size-font-button-small; // 17px
+                font-style: normal;
+                font-weight: $font-weight-medium; // 500
+                line-height: 133%;
+                letter-spacing: $letter-spacing-default;
+
+                &:hover,
+                &:focus {
+                    color: $text-dark;
+                }
 
                 &:visited {
-                    color: inherit;
+                    color: $text-dark;
                 }
+            }
+
+            &__edit {
+                position: absolute;
+                top: $spacing-400;
+                right: $spacing-400;
+                background-image: url(./images/edit-icon.png);
             }
 
             &__delete {
                 position: absolute;
                 top: ($spacing-400 * 2 + 26px);
                 right: $spacing-400;
-                width: 56px;
-                height: 26px;
-                background-repeat: no-repeat;
-                display: block;
-                text-decoration: underline;
-                padding-left: 28px;
+                background-image: url(./images/delete-icon.png);
             }
 
             &__language {
