--- a/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
+++ b/blocks/form/components/formcontextualhelp/formcontextualhelp.scss
@@ -1,18 +1,29 @@
 @use '../../../../styles/settings' as *;
+@use '../../../../styles/settings/breakpoints' as *;
+
 
 /******************************
     Base Panel Styling
 *******************************/
 .panel-formcontextualhelp {
   padding: $spacing-400 $spacing-300; // 20px 14px
-  background: $bg-light-primary;
+  background: $bg-light-primary; // usually $color-white
   display: block;
-  border-radius: $border-radius-mid;
+  border-radius: $border-radius-mid; // typically 8px
   margin-bottom: $spacing-600; // 32px
-  width: 70%;
 
   // Elevation-1
   box-shadow: 0px 2px 4px 0px rgba(22, 44, 69, 0.20);
+
+  width: 100%;
+
+  @include media('tablet') {
+    width: 70%;
+  }
+
+  @include media('desktop') {
+    width: 50%;
+  }
 
   > legend {
     margin-bottom: 0;
@@ -51,86 +62,5 @@
         margin-bottom: 0;
       }
     }
-  }
-}
-
-/******************************
-    Info Variant (shared)
-*******************************/
-.panel-formcontextualhelp--info {
-  .panel-formcontextualhelp__icon {
-    content: url('info-icon.png');
-  }
-
-  .panel-formcontextualhelp__footer {
-    display: inline-block;
-
-    &__link {
-      display: flex;
-      align-items: center;
-      margin-top: $spacing-200;
-    }
-
-    &__link-icon {
-      content: url('external-icon.png');
-      width: 22px;
-    }
-
-    &__link-text {
-      margin-right: 12px;
-    }
-  }
-}
-
-/******************************
-    Panel Colour Variants
-*******************************/
-.panel-formcontextualhelp--primary {
-  background-color: $bg-primary;
-  color: $text-primary;
-
-  .panel-formcontextualhelp__title {
-    color: $text-dark;
-  }
-
-  .panel-formcontextualhelp__footer__link-text {
-    color: $text-accent;
-  }
-}
-
-.panel-formcontextualhelp--secondary {
-  background-color: $bg-contextual-help-secondary;
-  color: $text-primary;
-
-  .panel-formcontextualhelp__title {
-    color: $text-dark;
-  }
-
-  .panel-formcontextualhelp__footer__link-text {
-    color: $text-accent;
-  }
-}
-
-.panel-formcontextualhelp--tertiary {
-  background-color: $bg-contextual-help-tertiary;
-  color: $text-white;
-
-  .panel-formcontextualhelp__title,
-  .plain-text-wrapper,
-  .plain-text-wrapper p {
-    color: $text-white;
-  }
-
-  .panel-formcontextualhelp__footer__link-text {
-    color: $text-white;
-
-    &:hover,
-    &:focus {
-      text-decoration: underline;
-    }
-  }
-
-  .panel-formcontextualhelp__icon {
-    filter: brightness(0) invert(1); // Invert icon for dark background
   }
 }
