--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -1,5 +1,4 @@
 @use '../../../../styles/settings' as *;
-@use '../../../../styles/base' as *;
 
 main .form form .panel-repeatable-panel {
     .repeatable-entries {
@@ -18,47 +17,6 @@ main .form form .panel-repeatable-panel {
             box-shadow: 0px 4px 8px 0px rgba(22, 44, 69, 0.18);
             position: relative;
             margin-bottom: $spacing-600;
-
-            &__edit,
-            &__delete {
-                width: 56px;
-                height: 26px;
-                background-repeat: no-repeat;
-                display: block;
-                text-decoration: underline;
-                padding-left: 28px;
-                color: $text-accent;
-                text-align: center;
-                font-family: $font-family;
-                font-size: $size-font-button-small; // 17px
-                font-style: normal;
-                font-weight: $font-weight-medium; // 500
-                line-height: 133%;
-                letter-spacing: $letter-spacing-default;
-
-                &:hover,
-                &:focus {
-                    color: $text-dark;
-                }
-
-                &:visited {
-                    color: $text-dark;
-                }
-            }
-
-            &__edit {
-                position: absolute;
-                top: $spacing-400;
-                right: $spacing-400;
-                background-image: url(./images/edit-icon.png);
-            }
-
-            &__delete {
-                position: absolute;
-                top: ($spacing-400 * 2 + 26px);
-                right: $spacing-400;
-                background-image: url(./images/delete-icon.png);
-            }
 
             &__language {
                 color: $color-primary-navy;
@@ -80,6 +38,60 @@ main .form form .panel-repeatable-panel {
                 line-height: 160%;
                 letter-spacing: $letter-spacing-default;
             }
+
+            &__delete {
+                position: absolute;
+                top: ($spacing-400 * 2 + 26px);
+                right: $spacing-400;
+                width: 56px;
+                height: 26px;
+                background-repeat: no-repeat;
+                display: block;
+                text-decoration: underline;
+                padding-left: 28px;
+
+                font-family: $font-family;
+                font-size: $size-font-body-default;
+                font-style: normal;
+                font-weight: $font-weight-medium;
+                line-height: 133%;
+                letter-spacing: $letter-spacing-default;
+                color: $text-accent;
+
+                &:hover,
+                &:focus,
+                &:visited {
+                    color: $text-dark;
+                }
+            }
+        }
+    }
+
+    .repeatable-entry__edit {
+        position: absolute;
+        top: $spacing-400;
+        right: $spacing-400;
+        width: 56px;
+        height: 26px;
+        background-image: url('./images/edit-icon.png');
+        background-repeat: no-repeat;
+        display: block;
+        text-align: center;
+        padding-left: 28px;
+        text-decoration: underline;
+
+        font-family: $font-family;
+        font-size: $size-font-body-default;
+        font-style: normal;
+        font-weight: $font-weight-medium;
+        line-height: 133%;
+        letter-spacing: $letter-spacing-default;
+        color: $text-accent;
+
+        &:hover,
+        &:focus,
+        &:visited {
+            color: $text-dark;
         }
     }
 
