--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -512,3 +512,28 @@ textarea {
 .field-wrapper.field-invalid input[type='number'] {
   @include input-error;
 }
+
+
+/*****************************
+   FORM INPUT LABELS, BUTTONS etc
+*****************************/
+
+@mixin font-label {
+  font-size: $size-font-label;
+  font-weight: $font-weight-medium;
+  line-height: 133%;
+  letter-spacing: $letter-spacing-default;
+}
+
+@mixin font-button-default {
+  font-size: $size-font-button-default;
+  font-weight: $font-weight-medium;
+  line-height: 133%;
+}
+
+@mixin font-error-message {
+  font-size: $size-font-error-message;
+  font-weight: $font-weight-regular;
+  line-height: 160%;
+}
+
