--- a/blocks/form/components/datepicker/datepicker.scss
+++ b/blocks/form/components/datepicker/datepicker.scss
@@ -1,5 +1,17 @@
 @use '../../../../styles/settings' as *;
 
 
-fieldset.datepicker {
+fieldset.field-datepicker {
+    display: flex;
+
+    &[data-required=true]>legend::after {
+        content: "*";
+        color: var(--form-error-color);
+        padding-inline-start: 0.3125rem;
+    }
+
+    >.field-month,
+    >.field-year {
+        flex: 1;
+    }
 }
