--- a/styles/settings/_index.scss
+++ b/styles/settings/_index.scss
@@ -5,12 +5,13 @@
 /// Added into all of the SCSS file that included setting file
 // --- !!!!!!!!!! ---
 
-@forward './colors';
-@forward './fonts';
-@forward './tokens';
-@forward './utils';
-@forward './breakpoints';
-@forward './spacings';
-@forward './borders';
-@forward './elevations';
-@forward './mixins';
+
+@forward 'borders';
+@forward 'breakpoints';
+@forward 'colors';
+@forward 'elevations';
+@forward 'fonts';
+@forward 'mixins';
+@forward 'spacings';
+@forward 'tokens';
+@forward 'utils';
