--- a/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
+++ b/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
@@ -10,8 +10,7 @@ fieldset.advanceddatepicker {
         padding-inline-start: 0.3125rem;
     }
 
-    >.field-month,
-    >.field-year {
+    >.drop-down-wrapper {
         flex: 1;
     }
 }
