--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -4,7 +4,7 @@
 @use '../settings/spacings' as *;
 @use '../settings/utils' as *;
 @use '../settings/borders' as *;
-@use '../base/typography' as *; //
+@use '../base/typography' as *;
 
 
 /******************************
