--- a/blocks/form/components/education/education.scss
+++ b/blocks/form/components/education/education.scss
@@ -1,24 +1,25 @@
 @use '../../../../styles/settings' as *;
 
-main .form form {
+main .form form .panel-repeatable-panel__education {
     .repeatable-entry {
         &__course {
             @include font-body-large;
         }
+
+        &__nc-search--box {
+            @include font-body-large;
+            color: $text-primary;
+            font-weight: 700;
+        }
+
+        &__start-year,
+        &__completion-status {
+            line-height: 160%;
+        }
+
+        &__completion-status {
+            color: $text-secondary;
+        }
     }
 
-    .repeatable-entry__nc-search--box {
-        @include font-body-large;
-        color: $text-primary;
-        font-weight: 700;
-    }
-
-    .repeatable-entry__completion-status,
-    .repeatable-entry__start-year {
-        line-height: 160%;
-    }
-
-    .repeatable-entry__completion-status {
-        color: $text-secondary;
-    }
 }
